Remove obsolete endpoint
Search by index is the same as a search with only a `content:`
expression.
